Menu and registration button mobile fixes

--- a/_sass/_event.scss
+++ b/_sass/_event.scss
@@ -24,7 +24,7 @@
 	grid-area: cover;
 	color: white;
 	text-align: left;
-	
+
 	div {
 		margin-left: 10%;
 		line-height: 1.25em;
@@ -47,7 +47,7 @@
 	margin-block-start: 0;
     margin-block-end: 0;
   }
-  
+
   .content-wrapper {
 	float: left;
 	max-width: 65%;
@@ -62,20 +62,20 @@
   .event-information {
 	margin-bottom: 40px;
   }
-  
+
   .ticket-option {
 	margin-bottom: 32px;
 	padding-bottom: 32px;
 	display: flex;
 	border-bottom: 1px solid #d3d3d3;
   }
-  
+
   .ticket-option:last-child {
 	border-bottom: 0;
 	margin-bottom: 0;
 	padding-bottom: 0;
   }
-  
+
   .ticket-buy-button {
 	width: 110px;
 	text-align: right;
@@ -93,66 +93,66 @@
 	display: inline-block;
 	text-align: center;
   }
-  
+
   .ticket-button:hover {
 	background-color: #000000 !important;
 	color: #ffffff;
   }
-  
+
   .ticket-button.selected {
 	background-color: #ff0000;
 	color: #ffffff;
   }
-  
+
   .ticket-button .product-notice {
 	font-size: 50%;
   }
-  
+
   .ticket-option-information {
 	flex: 1;
   }
-  
+
   .ticket-option-title {
 	font-weight: bold;
 	font-size: 105%;
 	margin-bottom: 6px;
 	cursor: pointer;
   }
-  
+
   .ticket-option-description {
 	font-size: 85%;
   }
-  
+
   .ticket-listing {
 	padding-bottom: 40px;
 	margin-bottom: 50px;
 	border-bottom: 1px solid #000000;
   }
-  
+
   .registration-container {
 	margin-top: 40px;
 	max-width: 70%;
   }
-  
+
   .pad-field {
 	margin-bottom: 10px;
   }
-  
+
   .extra-pad {
 	margin-bottom: 25px;
   }
-  
+
   .registration-form {
 	max-width: 70%;
   }
-  
+
   .registration-form input {
 	width: 100%;
 	border: 1px solid #000000;
 	padding: 8px;
 	font: inherit;
   }
-  
+
   .checkbox-container {
 	display: block;
 	position: relative;
@@ -164,7 +164,7 @@
 	-ms-user-select: none;
 	user-select: none;
   }
-  
+
   .checkbox-container input {
 	position: absolute;
 	opacity: 0;
@@ -172,7 +172,7 @@
 	height: 0;
 	width: 0;
   }
-  
+
   .checkbox-container .checkmark {
 	position: absolute;
 	top: 0;
@@ -182,25 +182,25 @@
 	background: 1px solid #000;
 	background-color: #888;
   }
-  
+
   .checkbox-container:hover input ~ .checkmark {
 	background-color: #ccc;
   }
-  
+
   .checkbox-container input:checked ~ .checkmark {
 	background-color: #ff0000;
   }
-  
+
   .checkbox-container .checkmark:after {
 	content: "";
 	position: absolute;
 	display: none;
   }
-  
+
   .checkbox-container input:checked ~ .checkmark:after {
 	display: block;
   }
-  
+
   .checkbox-container .checkmark:after {
 	left: 9px;
 	top: 5px;
@@ -212,45 +212,45 @@
 	-ms-transform: rotate(45deg);
 	transform: rotate(45deg);
   }
-  
+
   .multiselect__option--highlight {
 	background: #ff0000 !important;
   }
-  
+
   .multiselect__tags {
 	border-radius: 0px !important;
 	border: 1px solid #000000 !important;
   }
-  
+
   .multiselect__tag, .multiselect__tag:hover, .multiselect__tag-icon:hover, .multiselect__tag-icon:after {
 	background: #ff0000 !important;
 	color: #ffffff !important;
   }
-  
+
   .error-text {
 	color: #ff0000;
 	font-size: 75%;
 	margin-top: 4px !important;
   }
-  
+
   .event ul {
 	padding-inline-start: 0;
   }
-  
+
   .button-discount-code-container {
 	display: flex;
 	margin-bottom: 40px;
   }
-  
+
   .purchase-button {
 	background-color: #ff0000;
 	color: #ffffff;
   }
-  
+
   .purchase-button:hover {
 	background-color: #8B0000;
   }
-  
+
   .help-text {
 	font-size: 70%;
   }
@@ -305,7 +305,7 @@
 	}
 
 	footer {
-		margin: 0;	
+		margin: 0;
 	}
 	.footer-wrapper {
 		margin: 1em;
@@ -317,7 +317,7 @@
 		 li {
 			  background-color: gray;
 			  color: black;
-			  
+
 			  &:hover {
 				background-color: lighten(gray, 10%);
 			  }
@@ -351,7 +351,7 @@
 
 .event-wrapper {
 	.left-70 {
-		width: 65%;
+		width: 60%;
 		float: left;
 	}
 }
@@ -454,7 +454,7 @@ section.keynotes-front {
 			height: 250px;
 			flex-shrink: 0;
 			flex-grow: 0;
-	
+
 			a {
 				filter: grayscale(0%);
 				position: relative;
@@ -489,14 +489,14 @@ section.keynotes-front {
 div.keynote-full {
 	display: grid;
 	grid-template-columns: 20% 80%;
-	grid-template-areas: 
+	grid-template-areas:
 			"img txt"
 			"img txt"
 			"img txt";
 
 	a img {
-		width: 200px; 
-		height: 200px; 
+		width: 200px;
+		height: 200px;
 		border-radius: 4px;
 		border-style: solid;
 		border-color: gray;
@@ -507,7 +507,7 @@ div.keynote-full {
 	.keynote-info{
 		min-height: 220px;
 	}
-} 
+}
 
 .event ul {
 	list-style-type: none;
@@ -613,7 +613,7 @@ section.team-list {
 @media (max-width: 1131px) {
 	div.keynote-full {
 		grid-template-columns: 1fr;
-		grid-template-areas: 
+		grid-template-areas:
 			"img"
 			"img"
 			"img";
@@ -635,7 +635,7 @@ section.team-list {
 			float:none;
 		}
 
-		.registration-container, 
+		.registration-container,
 		.registration-form {
 			max-width: 100%;
 		  }
@@ -712,7 +712,7 @@ section.team-list {
 
 	.event-logo-div {
 		float: left;
-		background-repeat: no-repeat; 
+		background-repeat: no-repeat;
 		background-size: contain;
 		margin: auto;
 		width: 500px;
@@ -773,7 +773,7 @@ section.team-list {
 
 @media (max-width: 2075px) {
 	//todo: event logo smaller, change margin-top on text
-	.event{	
+	.event{
 		.event-image-container.big{
 			max-height: 300px;
 			height: 300px;
@@ -801,7 +801,7 @@ section.team-list {
 
 @media (max-width: 1332px) {
 	//todo: event logo smaller, change margin-top on text
-	.event{	
+	.event{
 		.footer-two {
 			min-width: 500px;
 		}
@@ -813,7 +813,7 @@ section.team-list {
 
 @media (max-width: 1305px) {
 	//todo: event logo smaller, change margin-top on text
-	.event{	
+	.event{
 		.event-pricing-two {
 			float: none;
 			box-shadow: none;
@@ -824,7 +824,7 @@ section.team-list {
 
 @media (max-width: 1132px) {
 	//todo: event logo smaller, change margin-top on text
-	.event{	
+	.event{
 		.event-header-info-two{
 			top: 140px;
 		}
